@@ -32,9 +32,6 @@ halflife: 0
 ## warn_duration: how long should tk warnings remain active. 30m = thirty minutes,  1h = one hour, 2d = two days 
 warn_duration: 1h
 
-## extra TK points to be given when team spawnkilling is detected (requires Spawnkill Plugin enabled). (0 = disabled)
-team_spawnkill_extra_points: 100
-
 [messages]
 ## ban: message given to banned players as a reason 
 ban: ^7team damage over limit
